Add stylesheet to project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- Form -->
     <section>
-      <form action="" class="grocery-form">
+      <form class="grocery-form">
         <p class="alert"></p>
         <h2>Grocery Items</h2>
         <div class="form-control">
@@ -64,19 +64,7 @@
       </form>
 
       <div class="grocery-container">
-        <div class="grocery-list">
-          <article class="grocery-item">
-<p class="title">Item</p>
-<div class="btn-container">
-  <button type="button" class="edit-btn">
-    <i class="fa fa-edit"></i>
-  </button>
-  <button type="button" class="delete -btn">
-    <i class="fa fa-trash"></i>
-  </button>
-</div>
-          </article>
-        </div>
+        <div class="grocery-list"></div>
         <button type="button" class="clear-btn">Clear Items</button>
       </div>
     </section>
