--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Form -->
-    <section>
+    <section class="section-center">
       <form class="grocery-form">
         <p class="alert"></p>
         <h2>Grocery Items</h2>
